--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "author": "GuideSmiths",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.0.0",
+    "async": "^2.6.0",
     "boom": "^3.2.2",
-    "express": "^4.14.0",
-    "jsontoxml": "0.0.11",
-    "lodash.get": "^4.3.0",
-    "lodash.has": "^4.4.0",
-    "lodash.merge": "^4.4.0",
-    "lodash.once": "^4.0.0",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "jsontoxml": "^0.1.0",
+    "lodash.get": "^4.4.2",
+    "lodash.has": "^4.5.2",
+    "lodash.merge": "^4.6.0",
+    "lodash.once": "^4.1.1",
     "parse-duration": "^0.1.1",
     "server-destroy": "^1.0.1"
   },
