--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "prepublish": "npm run snyk-protect",
+    "eslint": "eslint . --ext .js --config .eslintrc.json --ignore-path .eslintignore --cache",
+    "eslint:fix": "eslint . --ext .js --fix",
+    "lint": "npm run eslint"
   },
   "author": "GuideSmiths",
   "license": "ISC",
@@ -24,7 +27,6 @@
     "server-destroy": "^1.0.1",
     "snyk": "^1.316.1"
   },
-  "devDependencies": {},
   "keywords": [
     "Systemic",
     "Express"
@@ -37,5 +39,8 @@
     "url": "https://github.com/guidesmiths/systemic-express/issues"
   },
   "homepage": "https://github.com/guidesmiths/systemic-express#readme",
-  "snyk": true
+  "snyk": true,
+  "devDependencies": {
+    "eslint": "7.32.0"
+  }
 }
