Update lodash and some deps

--- a/package.json
+++ b/package.json
@@ -17,12 +17,9 @@
     "async": "^3.2.3",
     "boom": "^3.2.2",
     "debug": "^3.1.0",
-    "express": "^4.16.2",
+    "express": "^4.17.3",
     "jsontoxml": "^0.1.0",
-    "lodash.get": "^4.4.2",
-    "lodash.has": "^4.5.2",
-    "lodash.merge": "^4.6.0",
-    "lodash.once": "^4.1.1",
+    "lodash": "^4.17.21",
     "parse-duration": "^0.1.1",
     "server-destroy": "^1.0.1",
     "snyk": "^1.316.1"
