--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "systemic-express",
+  "name": "@infinitaslearning/systemic-express",
   "version": "1.1.0",
   "description": "A systemic express component",
   "main": "index.js",
