--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,8 @@ jobs:
           scope: '@infinitaslearning'
       - run: npm ci
       - run: npm version `npm pkg get version | tr -d '"' | cut -d '.' -f 1-2`.${{ github.run_number }}
+      - run: git config --global user.email "github@infinitaslearning.com"
+      - run: git config --global user.name "Infinitas Learning"
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.PAT_GITHUB_PACKAGES }}
