--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.3",
+    "body-parser": "^1.20.0",
     "boom": "^3.2.2",
     "debug": "^3.1.0",
     "express": "^4.17.3",
