--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A systemic express component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/*",
     "eslint": "eslint . --ext .js --config .eslintrc.json --ignore-path .eslintignore --cache",
     "eslint:fix": "eslint . --ext .js --fix",
     "lint": "npm run eslint"
@@ -12,6 +12,7 @@
   "author": "Infinitas",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "async": "^3.2.3",
     "body-parser": "^1.20.0",
     "boom": "^3.2.2",
@@ -37,6 +38,9 @@
   "snyk": true,
   "devDependencies": {
     "eslint": "7.32.0",
+    "mocha": "^10.6.0",
+    "sinon": "^18.0.0",
+    "supertest": "^7.0.0",
     "systemic": "^4.1.2"
   }
 }
