--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "A systemic express component",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/*",
-    "eslint": "eslint . --ext .js --config .eslintrc.json --ignore-path .eslintignore --cache",
-    "eslint:fix": "eslint . --ext .js --fix",
-    "lint": "npm run eslint"
+    "test": "mocha test/*"
   },
   "author": "Infinitas",
   "license": "ISC",
@@ -36,7 +33,6 @@
   "homepage": "https://github.com/infinitaslearning/systemic-express#readme",
   "snyk": true,
   "devDependencies": {
-    "eslint": "7.32.0",
     "mocha": "^10.6.0",
     "sinon": "^18.0.0",
     "supertest": "^7.0.0",
